--- a/examples/video.html
+++ b/examples/video.html
@@ -48,7 +48,7 @@
     <video id="video" loop muted crossOrigin="anonymous" playsinline style="display:none">
         <!--        <source src="textures/video/sintel.ogv" type='video/ogg; codecs="theora, vorbis"'>-->
         <!--        <source src="textures/video/FluidSimulaionFun.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>-->
-        <source src="textures/video/all_edit.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
+        <source src="textures/video/0001-2400.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
         <!--        <source src="textures/video/hit_5.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>-->
     </video>
 
